fixed dark mode for tabs and uneven code tab line number length

--- a/assets/scss/components/_code.scss
+++ b/assets/scss/components/_code.scss
@@ -21,10 +21,11 @@ pre {
     color: lightgray;
     right: -10%;
     top: 0em;
+    font-size: inherit;
     border-radius: 25px;
     background: rgba(69, 68, 68, 1);
     padding: 0 1em;
-    margin: 0.3em 0.5em;
+    margin: 0.3em 0.7em;
     opacity: 0;
     transition: .5s cubic-bezier(1, 0, 0, 1);
     &:hover {
@@ -44,6 +45,7 @@ pre {
     color: lightgray;
     outline: none; 
     border: none;
+    font-size: inherit;
     right: -20%;
     top: 0em;
     border-radius: 25px;
